--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/_typography.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/_typography.scss
@@ -15,13 +15,24 @@ $fontsize-lg: $fontsize-md * 1.33;
 $fontsize-xl: $fontsize-md * 1.66;
 $fontsize-xxl: $fontsize-md * 2;
 
-html {
-  font-size: $fontsize-html;
-}
+$lineheight-default: 1.6;
+$lineheight-headings: 1.2;
 
-body {
+@mixin typography-body {
   font-size: $fontsize-body;
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+  line-height: $lineheight-default;
+}
+
+@mixin typography-heading {
+  font-weight: bold;
+  line-height: 1.2;
+  padding: 0;
+  margin: 0 0 .75em 0;
+}
+
+html {
+  font-size: $fontsize-html;
 }
 
 body,
@@ -29,17 +40,13 @@ button,
 input,
 select,
 optgroup,
-textarea {
-  color: #404040;
-  font-size: 1em;
-  line-height: 1.5;
+textarea,
+p {
+  @include typography-body;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: bold;
-  line-height: 1.2;
-  padding: 0;
-  margin: 0 0 .75em 0;
+  @include typography-heading;
 }
 
 h1 {
@@ -67,8 +74,6 @@ h6 {
 }
 
 p {
-  font-size: 1em;
-  line-height: 1.5;
   margin-bottom: 1em;
 }
 
@@ -87,9 +92,8 @@ address {
 pre {
   background: #eee;
   font-family: "Courier 10 Pitch", Courier, monospace;
-  font-size: 15px;
-  font-size: 0.9375rem;
-  line-height: 1.6;
+  font-size: $fontsize-sm;
+  line-height: $lineheight-default;
   margin-bottom: 1.6em;
   max-width: 100%;
   overflow: auto;
@@ -98,8 +102,7 @@ pre {
 
 code, kbd, tt, var {
   font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
-  font-size: 15px;
-  font-size: 0.9375rem;
+  font-size: $fontsize-sm;
 }
 
 abbr, acronym {
@@ -113,5 +116,5 @@ mark, ins {
 }
 
 big {
-  font-size: 125%;
+  font-size: $fontsize-xxl;
 }
