--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/_typography.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/_typography.scss
@@ -2,7 +2,7 @@
 # Typography
 --------------------------------------------------------------*/
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Alice|Lato');
 
 $font-size--base: 16;
 $font-size--body: $font-size--base;
@@ -18,10 +18,13 @@ $font-size--xxl: $font-size--md * 2;
 $lineheight-default: 1.6;
 $lineheight-headings: 1.2;
 
+
 @mixin typography-body {
   font-size: px-to-rem($font-size--body);
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   line-height: $lineheight-default;
+  -webkit-font-smoothing:antialiased;
+  -moz-osx-font-smoothing:grayscale
 
   /*
   @include breakpoint(700px) {
@@ -35,7 +38,7 @@ $lineheight-headings: 1.2;
 }
 
 @mixin typography-heading {
-  font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+  font-family: 'Alice', Helvetica, Arial, sans-serif;
   font-weight: bold;
   line-height: 1.2;
   padding: 0;
