--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/typography/_typography.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/typography/_typography.scss
@@ -1,52 +1,67 @@
-/*--------------------------------------------------------------
-# Typography
---------------------------------------------------------------*/
-
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Alice|Lato');
 
-$font-size--base: 16;
-$font-size--body: $font-size--base;
+$font-size--md: 1em;
 
-$font-size--md: $font-size--body;
-$font-size--xxs: $font-size--md * .7;
-$font-size--xs: $font-size--md * .8;
+$font-size--lg: $font-size--md * 1.25;
+$font-size--xl: $font-size--md * 1.5;
+$font-size--xxl: $font-size--md * 1.75;
+
 $font-size--sm: $font-size--md * .9;
-$font-size--lg: $font-size--md * 1.33;
-$font-size--xl: $font-size--md * 1.66;
-$font-size--xxl: $font-size--md * 2;
+$font-size--xs: $font-size--md * .8;
+$font-size--xxs: $font-size--md * .7;
 
-$lineheight-default: 1.6;
-$lineheight-headings: 1.2;
-
-
-@mixin typography-body {
-  font-size: px-to-rem($font-size--body);
-  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-  line-height: $lineheight-default;
-  -webkit-font-smoothing:antialiased;
-  -moz-osx-font-smoothing:grayscale
-
-  /*
-  @include breakpoint(700px) {
-    font-size: px-to-rem($font-size--xs);
+@mixin fontsize($size:md) {
+  @if $size = "md" {
+    font-size: $font-size--md;
   }
-  @media only screen and (min-width: $sm) {
-    font-size: px-to-rem($font-size--xs);
+  @if $size = "lg" {
+    font-size: $font-size--lg;
   }
-  */
-
-}
-
-@mixin typography-heading {
-  font-family: 'Alice', Helvetica, Arial, sans-serif;
-  font-weight: bold;
-  line-height: 1.2;
-  padding: 0;
-  margin: 0 0 .75em 0;
+  @if $size = "xl" {
+    font-size: $font-size--xl;
+  }
 }
 
 html {
-  font-size: px-to-rem($font-size--base);
+  // transition: all .1s linear;
+  font-size: 18px;
+  @media (min-width: 600px) {
+    font-size: 16px;
+  }
+  @media (min-width: 960px) {
+    font-size: 17px;
+  }
+  @media (min-width: 1024px) {
+    font-size: 18px;
+  }
+  @media (min-width: 1200px) {
+    font-size: 19px;
+  }
+}
+
+body {
+  font-family: "Rubik", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+  font-size: 1em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: rgba(black, .75);
+  line-height: 1.6;
+}
+
+h1, h2, h3, h4, h5, .navbar-brand {
+  font-family: "Copse", Helvetica, Arial, sans-serif;
+  font-weight: normal;
+  -webkit-text-stroke: 0.45px rgba(0, 0, 0, 0.1);
+
+  color: rgba(black, .85);
+  text-shadow: rgba(black, .25) 0 1px 1px;
+  line-height: 1.2;
+}
+
+html {
+  font-size: #{$font-size--base}px;
 }
 
 body,
@@ -89,6 +104,7 @@ h6 {
 
 p {
   margin-bottom: 1em;
+  text-align: justify;
 }
 
 dfn, cite, em, i {
