--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/typography/_typography.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/typography/_typography.scss
@@ -46,11 +46,15 @@ a:visited {
 
 .site-title {
   @extend h1;
-  font-size: px-to-rem($font-size--xxl);
+  font-size: px-to-rem($font-size--xl);
   margin: 0;
 
   a {
     text-decoration: none;
+  }
+
+  @include breakpoint($sm) {
+    font-size: px-to-rem($font-size--xxl);
   }
 }
 
