--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/hc-offcanvas-nav/_demo.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/hc-offcanvas-nav/_demo.scss
@@ -3,7 +3,7 @@ $background: #243949;
 $white: #fffce1;
 $yellow: #dab977;
 
-@import './hc-offcanvas-nav';
+@import 'hc-offcanvas-nav';
 @import './mixins';
 
 @mixin mi {
