--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_mixins.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_mixins.scss
@@ -1,7 +1,7 @@
 // Typography mixins.
 @mixin typography-body {
   font-size: px-to-rem($font-size--base);
-  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+  font-family: $font-choice--base;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-weight: 400;
@@ -10,13 +10,14 @@
 }
 
 @mixin typography-heading {
-  font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+  font-family: $font-choice--heading;
   font-weight: bold;
   line-height: 1.2;
   padding: 0;
   margin: 0 0 .75em 0;
   color: mix(black, $color--primary, 25%);
 }
+
 
 
 // Padding mixins.
