--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_variables.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_variables.scss
@@ -16,21 +16,21 @@ $color--gray-darkest: mix($color--white, $color--black, 10%);
 $color--header: $color--gray-lightest;
 $color--footer: lighten($color--header, 5%);
 
-
 // Typography variables.
 $font-choice--base: 'Merriweather', Palatino, Times, serif;
 $font-choice--heading: 'Montserrat', Helvetica, Arial, sans-serif;
 
-$font-size--base: 18;
+$font-size--html: 16px;
+$font-size--base: 1em;
 
+$font-size--xxs: $font-size--base * .7;
+$font-size--xs: $font-size--base * .8;
+$font-size--sm: $font-size--base * .9;
 $font-size--md: $font-size--base;
-$font-size--xxs: $font-size--md * .7;
-$font-size--xs: $font-size--md * .8;
-$font-size--sm: $font-size--md * .9;
-$font-size--lg: $font-size--md * 1.25;
-$font-size--xl: $font-size--md * 1.5;
-$font-size--xxl: $font-size--md * 1.75;
-$font-size--xxxl: $font-size--md * 2;
+$font-size--lg: $font-size--base * 1.25;
+$font-size--xl: $font-size--base * 1.5;
+$font-size--xxl: $font-size--base * 1.75;
+$font-size--xxxl: $font-size--base * 2;
 
 $lineheight-default: 1.6;
 $lineheight-headings: 1.2;
