--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/typography/_typography.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/typography/_typography.scss
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Alice|Lato|Montserrat|Domine|Libre+Baskerville:400,400i|Merriweather:300,400,400i,700|Volkhov:400,400i');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Alice|Lato|Lora|Montserrat|Noto+Serif|Domine|Libre+Baskerville:400,400i|Merriweather:300,400,400i,700|Volkhov:400,400i');
+
+html {
+  font-size: $font-size--html;
+}
 
 body,
 button,
@@ -16,24 +20,23 @@ h1, h2, h3, h4, h5, h6, #primary-menu {
 
 // Heading font sizes.
 h1 {
-  font-size: px-to-rem($font-size--xxl);
-  letter-spacing: px-to-rem($font-size--xxl * .2);
+  font-size: $font-size--xxl;
+  letter-spacing: ($font-size--xxl * .2);
   text-transform: uppercase;
 }
 h2 {
-  font-size: px-to-rem($font-size--xl);
-  letter-spacing: px-to-rem($font-size--xl * .2);
+  font-size: $font-size--xl;
+  letter-spacing: ($font-size--xl * .2);
   text-transform: uppercase;
 }
 h3 {
-  font-size: px-to-rem($font-size--lg);
-  letter-spacing: px-to-rem($font-size--lg * .2);
+  font-size: $font-size--lg;
+  letter-spacing: ($font-size--lg * .2);
 }
 
-h4 { font-size: px-to-rem($font-size--md); }
-h5 { font-size: px-to-rem($font-size--sm); }
-h6 { font-size: px-to-rem($font-size--xxs); }
-
+h4 { font-size: $font-size--md; }
+h5 { font-size: $font-size--sm; }
+h6 { font-size: $font-size--xxs; }
 
 a,
 a:visited {
@@ -46,7 +49,7 @@ a:visited {
 
 .site-title {
   @extend h1;
-  font-size: px-to-rem($font-size--xl);
+  font-size: $font-size--xl;
   margin: 0;
 
   a {
@@ -54,13 +57,13 @@ a:visited {
   }
 
   @include breakpoint($sm) {
-    font-size: px-to-rem($font-size--xxl);
+    font-size: $font-size--xxl;
   }
 }
 
 p {
   margin-bottom: 1em;
-  text-align: justify;
+  // text-align: justify;
 }
 
 dfn, cite, em, i {
@@ -78,7 +81,7 @@ address {
 pre {
   background: #eee;
   font-family: "Courier 10 Pitch", Courier, monospace;
-  font-size: px-to-rem($font-size--sm);
+  font-size: $font-size--sm;
   line-height: $lineheight-default;
   margin-bottom: 1.6em;
   max-width: 100%;
@@ -88,7 +91,7 @@ pre {
 
 code, kbd, tt, var {
   font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
-  font-size: px-to-rem($font-size--sm);
+  font-size: $font-size--sm;
 }
 
 abbr, acronym {
@@ -102,5 +105,5 @@ mark, ins {
 }
 
 big {
-  font-size: px-to-rem($font-size--xxl);
+  font-size: $font-size--xxl;
 }
