--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/typography/_typography.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/typography/_typography.scss
@@ -4,13 +4,7 @@ html {
   font-size: $font-size--html;
 }
 
-body,
-button,
-input,
-select,
-optgroup,
-textarea,
-p {
+body.front-end {
   @include typography-body;
 }
 
