Styling column block.

--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_components.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_components.scss
@@ -1,7 +1,5 @@
-@import "blocks";
+@import "blocks/blocks";
 @import "nav";
 @import "hc-offcanvas-nav/hc-offcanvas-nav";
 @import "site-header";
 @import "site-footer";
-
-@import "block-event";
