Home page fixes.

--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_block-media.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_block-media.scss
@@ -12,16 +12,15 @@
   }
 
   &--title {
-    font-weight: 700;
+
   }
 
   &--subtitle {
-    font-weight: 300;
-
+    @extend p;
   }
 
   &--date {
-    font-weight: 300;
+    @extend p;
   }
 
   &--body {
