--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/typography/_typography.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/typography/_typography.scss
@@ -8,7 +8,7 @@ body.front-end {
   @include typography-body;
 }
 
-h1, h2, h3, h4, h5, h6, #primary-menu {
+h1, h2, h3, h4, h5, h6, #primary-menu, .site-info {
   @include typography-heading;
 
   a {
