--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_nav.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_nav.scss
@@ -25,7 +25,7 @@ a.hc-nav-trigger {
 #primary-menu {
 
   .menu-item {
-    margin-right: 1em;
+    margin-right: 0;
 
     &:last-child {
       margin-right: 0;
@@ -33,10 +33,38 @@ a.hc-nav-trigger {
   }
 
   .sub-menu {
+    background-color: white;
+
     .menu-item {
       background-color: white;
       margin-right: 0;
+
+      a {
+        padding: .5em;
+        margin: 0;
+        display: block;
+        border-bottom: 1px solid rgba($color--primary, .125);
+
+        &:hover {
+          background-color: rgba($color--primary, .75);
+          color: white;
+        }
+      }
     }
   }
+}
 
+#primary-menu > .menu-item > a {
+  display: block;
+  padding: .25em .5em;
+  border-radius: .3em;
+
+  &:hover {
+    background-color: rgba($color--primary, .75);
+    color: white;
+  }
+}
+
+#primary-menu > .menu-item-has-children > a {
+  border-radius: .3em .3em 0 0;
 }
