--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_mixins.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_mixins.scss
@@ -33,64 +33,64 @@
 
 // Block mixins.
 @mixin block--align-right {
-  width: 100%;
+  // width: 100%;
   float: none;
   margin-left: 0;
   margin-right: 0;
 
   img {
-    width: 100%;
+    // width: 100%;
     height: auto;
   }
 
   @include breakpoint($sm) {
     img {
-      width: auto;
+      // width: auto;
       height: auto;
     }
   }
 
   @include breakpoint($md) {
-    width: auto;
+    // width: auto;
     float: right;
     max-width: 50%;
     margin-left: 2em /*!rtl:end:ignore*/;
     margin-right: 0;
 
     img {
-      width: auto;
+      // width: auto;
       height: auto;
     }
   }
 }
 
 @mixin block--align-left {
-  width: 100%;
+  // width: 100%;
   float: none;
   margin-left: 0;
   margin-right: 0;
 
   img {
-    width: 100%;
+    // width: 100%;
     height: auto;
   }
 
   @include breakpoint($sm) {
     img {
-      width: auto;
+      // width: auto;
       height: auto;
     }
   }
 
   @include breakpoint($md) {
-    width: auto;
+    // width: auto;
     float: left;
     max-width: 50%;
     margin-left: 0;
     margin-right: 2em /*!rtl:end:ignore*/;
 
     img {
-      width: auto;
+      // width: auto;
       height: auto;
     }
   }
