--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_blocks.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_blocks.scss
@@ -1,4 +1,6 @@
-@import "block-event";
-@import "block-media";
 @import "wp-block-column";
 @import "wp-block-image";
+
+@import "block--event";
+@import "block--media";
+@import "block--home-page-feature";
