Fix to link in home page feature block.

--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/styles_editor.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/styles_editor.scss
@@ -35,6 +35,10 @@ p {
   font-size: $font-size--base;
 }
 
+.editor-styles-wrapper .home-page-feature--link {
+  display: none;
+}
+
 .editor-post-title__block .editor-post-title__input {
   @extend h1;
   margin-left: 2px;
