--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/layout/_home-page-layout.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/layout/_home-page-layout.scss
@@ -14,27 +14,22 @@ body.home .section--content {
 
   display: grid;
   grid-gap: 1em;
-  // min-height: calc(100vh - (210px));
   grid-template-columns: 1fr;
-
-  // font-size: 1.5em;
-
-  @include breakpoint($sm) {
-    // font-size: 1em;
-  }
-
-  @include breakpoint($md) {
-    // font-size: 1em;
-  }
 
   @include breakpoint($md) {
     grid-template-columns: 1fr 1fr;
-    // height: calc(100vh - (210px));
+
+    .item.full-width {
+      grid-column: auto / span 2;
+    }
   }
 
   @include breakpoint($lg) {
     grid-template-columns: 1fr 1fr 1fr;
-    // height: calc(100vh - (210px));
+
+    .item.full-width {
+      grid-column: auto / span 3;
+    }
   }
 
   h3 {
