--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_site-header.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_site-header.scss
@@ -1,3 +1,18 @@
+body {
+  position: relative;
+}
+
 .section-outer--header {
   background-color: $color--header;
+}
+
+.section-outer--header {
+  position: fixed;
+  z-index: 1000;
+}
+
+.section-outer--content {
+  position: relative;
+  padding-top: 73px;
+  z-index: 500;
 }
