--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_block--home-page-feature.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_block--home-page-feature.scss
@@ -1,4 +1,3 @@
-
 .home-page-feature {
   text-decoration: none;
   padding: 1.25em;
@@ -71,6 +70,13 @@
       color: yellow;
       transition: .5s ease-in-out;
     }
+  }
+}
+
+.home-page-feature--featured-image {
+
+  .image-position--first & {
+    margin-bottom: 1em;
   }
 }
 
