Home page image work.

--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image--fun.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image--fun.scss
@@ -1,21 +1,38 @@
 body.home {
-  background-image: url(../../images/sluyter_body_fpo.jpg);
+  background-image: url(../../images/dean-portrait_027_v04_v01.jpg);
+  background-color: #2a231b;
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top -2.5em right 24%;
+  background-size: 170vw;
+  background-position: top -4.5vw right calc(40px - 40vw);
+
+  background-size: calc(110vw + 475px);
+  background-position: top -4.5vw right calc(-680px + 2vw);
+  background-position: top calc(0px - 2vw) left calc(-100px - 5vw);
+
+
+  background-size: calc(120vw + 475px);
+  background-position: top calc(25px - 4vw) left calc(-100px - 11vw);
+
 }
 
 body.home .section-outer--header {
-  background-color: rgba(white, .5);
+  background-color: rgba(white, .85);
 }
 
 .front-page-image {
+
+  height: calc(100px + 27vw);
+
   img {
     display: none;
   }
 }
 
 .front-page-grid--wrapper {
-  background-color: rgba(white, .25);
+  background-color: rgba(white, .75);
   padding: .5em 0;
+}
+
+.front-page-text .inner {
+  display: none;
 }
