Further typographical changes.

--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_variables.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_variables.scss
@@ -18,7 +18,7 @@ $color--footer: lighten($color--header, 5%);
 
 // Typography variables.
 $font-choice--base: 'Merriweather', Palatino, Times, serif;
-$font-choice--heading: 'Montserrat', Helvetica, Arial, sans-serif;
+$font-choice--heading: 'JosefinX Sans','Montserrat', Helvetica, Arial, sans-serif;
 
 $font-size--html: 16px;
 $font-size--base: 1em;
