--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_site-header.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_site-header.scss
@@ -6,17 +6,11 @@ body {
   background-color: rgba(white, .8);
   position: sticky;
   z-index: 1000;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid rgba($color--primary, .125);
   top: 0;
 }
 
 .section-outer--content {
   position: relative;
   z-index: 500;
-}
-
-@include breakpoint($md) {
-  body.home .section-outer--header {
-    // font-size: 2vw;
-  }
 }
