--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_mixins.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_mixins.scss
@@ -11,11 +11,16 @@
 
 @mixin typography-heading {
   font-family: $font-choice--heading;
-  font-weight: bold;
+  font-weight: 400;
   line-height: 1.2;
   padding: 0;
   margin: 0 0 .75em 0;
   color: mix(black, $color--primary, 25%);
+}
+
+@mixin typography-menu {
+  @include typography-heading;
+  font-weight: 400;
 }
 
 
