--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_site-header.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_site-header.scss
@@ -14,3 +14,32 @@ body {
   position: relative;
   z-index: 500;
 }
+
+body:not(.home) .site-title {
+
+  background-color: $color--primary;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  position: absolute;
+  top: 6px;
+  overflow: hidden;
+  transition: $transition;
+
+  a {
+    letter-spacing: 100px;
+    color: $color--white;
+    padding: 0;
+    margin: 0;
+    white-space: nowrap;
+    position: absolute;
+    top: 3px;
+    left: 8px;
+    font-size: 25px;
+  }
+
+  &:hover {
+    background-color: rgba($color--primary, .75);
+    transition: $transition;
+  }
+}
