--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_nav.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_nav.scss
@@ -25,7 +25,7 @@ a.hc-nav-trigger {
 #primary-menu {
 
   .menu-item {
-    margin-right: 0;
+    margin-right: .1vw;
 
     &:last-child {
       margin-right: 0;
