--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_site-header.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_site-header.scss
@@ -16,30 +16,28 @@ body {
 }
 
 body:not(.home) .site-title {
-
-  background-color: $color--primary;
-  border-radius: 50%;
   width: 36px;
   height: 36px;
-  position: absolute;
-  top: 6px;
+  position: relative;
   overflow: hidden;
   transition: $transition;
 
   a {
-    letter-spacing: 100px;
-    color: $color--white;
     padding: 0;
     margin: 0;
-    white-space: nowrap;
     position: absolute;
-    top: 3px;
-    left: 8px;
-    font-size: 25px;
+    top: 0;
+    left: 0;
+    background-image: url("../../images/d_train.png");
+    background-size: contain;
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-indent: -9999px;
   }
 
   &:hover {
-    background-color: rgba($color--primary, .75);
+    opacity: .8;
     transition: $transition;
   }
 }
