--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_nav.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_nav.scss
@@ -25,10 +25,19 @@ a.hc-nav-trigger {
 #primary-menu {
 
   .menu-item {
-    margin-right: .1vw;
+    margin-right: 0;
+    transition: $transition;
 
     &:last-child {
       margin-right: 0;
+    }
+
+    @include breakpoint(1000px) {
+      margin-right: 10px;
+    }
+
+    @include breakpoint(1200px) {
+      margin-right: 15px;
     }
   }
 
