--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_block--home-page-feature.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_block--home-page-feature.scss
@@ -1,6 +1,6 @@
 .home-page-feature {
   text-decoration: none;
-  padding: 1.25em;
+  padding: .5em;
   background-color: rgba(#dedede, .5);
   position: relative;
   transition: .5s ease-in-out;
@@ -33,6 +33,13 @@
 
   .home-page-feature--link-text {
     color: $color--primary;
+  }
+
+  .home-page-feature--body,
+  .home-page-feature--title,
+  .home-page-feature--link-text {
+    padding-left: .5em;
+    padding-right: .5em;
   }
 
   .home-page-feature--link-text,
@@ -77,6 +84,11 @@
 
   .image-position--first & {
     margin-bottom: 1em;
+  }
+
+  img  {
+    width: 100%;
+    height: 100%;
   }
 }
 
