--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_variables.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_variables.scss
@@ -17,8 +17,8 @@ $color--header: $color--gray-lightest;
 $color--footer: lighten($color--header, 5%);
 
 // Typography variables.
-$font-choice--base: 'Merriweather', Palatino, Times, serif;
-$font-choice--heading: 'JosefinX Sans','Montserrat', Helvetica, Arial, sans-serif;
+$font-choice--base: 'Open Sans', 'Lato', 'Merriweather', Palatino, Times, serif;
+$font-choice--heading: 'Josefin Sans X','Montserrat', Helvetica, Arial, sans-serif;
 
 $font-size--html: 16px;
 $font-size--base: 1em;
