--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_block--event.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_block--event.scss
@@ -1,4 +1,5 @@
-.event {
+.event,
+.media {
   display: flex;
   margin-bottom: 1.5em;
 
@@ -8,30 +9,31 @@
 
   &--info {
     flex: 2;
+
     .inner {
       padding-left: 1em;
     }
   }
 
-  &--title {
-    h3 {
-      margin: 0;
-    }
+  &--title h3 {
+    margin: .4em 0 0 0;
   }
 
-  &--subtitle {
+  &--subtitle h4 {
+    margin: 0;
   }
 
   &--date {
-  }
-
-  &--body {
-
+    margin-bottom: .7em;
   }
 }
 
 .info-header {
-  background-color: rgba($color--header, .25);
+  background-color: rgba($color--header, .5);
   padding: .5em;
-  margin-bottom: .75em;
+  margin-bottom: 1em;
+}
+
+.info-body {
+ margin-left: .5em;
 }
