--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_block--media.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_block--media.scss
@@ -1,38 +1,18 @@
-.media {
-  display: flex;
-  margin-bottom: 1.5em;
+.media--title h3 {
+  margin: 0;
+}
 
-  &--image {
-    flex: 1;
+.media--subtitle h4 {
+  margin: .5em 0 0 0;
+}
+
+.media--date {
+  margin: 0;
+  h4 {
+    margin: .5em 0 0 0;
   }
+}
 
-  &--info {
-    flex: 2;
-    .inner {
-      padding-left: 1em;
-    }
-  }
-
-  &--title h3 {
-    margin: 0;
-  }
-
-  &--subtitle {
-    @extend p;
-    margin: .5em 0 0;
-  }
-
-  &--date h4 {
-    @extend p;
-    margin: .5em 0 0;
-  }
-
-  &--body {
-
-  }
-
-  &--link a {
-    display: inline-block;
-    margin: .5em 0 0;
-  }
+.media--length {
+  margin: 0 0 .5em 0;
 }
