--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_wp-block-image.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_wp-block-image.scss
@@ -23,6 +23,18 @@ figure {
   }
 }
 
+img[class*="wp-image-"],
+img[class*=" wp-image-"] {
+
+  &.alignleft {
+    @include img--align-left;
+  }
+
+  &.alignright {
+    @include img--align-right;
+  }
+}
+
 .editor-block-list__layout .editor-block-list__block[data-align=right]>.editor-block-list__block-edit {
   @include block--align-right;
 }
